syntax =  "proto3";
option optimize_for =  SPEED;
// option cc_enable_arenas =  true;

package identt.hrpc;

enum MasterCmdTypeE {
	M_NOACTION                                                     =  0;
	M_REQUESTTOKEN                                                 =  1;
	M_SUBMITTOKEN                                                  =  2;
	M_GETVALIDATED3PID                                             =  3;
	M_BIND3PID                                                     =  4;
	M_LOOKUP                                                       =  5;
	M_BULKLOOKUP                                                   =  6;
	M_GETPUBKEY                                                    =  7;
	M_GETPUBKEYVALID                                               =  8;
	M_GETEPHEMERALVALID                                            =  9;
	M_STOREINVITE                                                  = 10;
	M_PENDING                                                      = 11;
}

enum RemoteCmdTypeE {
	R_NOACTION                                                     =  0;
	R_REGISTER                                                     =  1;
	R_READONE                                                      =  2;
	R_TRANSLOG                                                     =  3;
	R_SETINFO                                                      =  4;
	R_ADDHOST                                                      =  5;
	R_BUFFTRANS                                                    =  6;
};

message RemoteT {
	string address                                                 =  1;
	uint64 logcounter                                              =  2;
	uint64 updated_at                                              =  3;
}

message StateT {
	string hostname                                                =  1;
	string master                                                  =  2;
	uint64 logcounter                                              =  4;
	bool is_master                                                 =  5;
	uint64 ts                                                      =  7;
	string thisurl                                                 =  8;
	repeated RemoteT remotes                                       =  9;

	bool not_found                                                 = 21;
}

